--- a/src/main/webapp/reports/regions.jrxml
+++ b/src/main/webapp/reports/regions.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.2.0.final using JasperReports Library version 6.2.0  -->
-<!-- 2016-03-22T12:56:53 -->
+<!-- 2016-03-23T00:13:11 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="regions" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="c30c96b4-b7fc-4d47-b021-141eae65f5ec">
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="SampleConn"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<queryString>
 		<![CDATA[select * from regions,org_branches
@@ -46,7 +46,7 @@ where reg_code = ob_reg_code]]>
 				<textField>
 					<reportElement x="40" y="10" width="190" height="30" uuid="e02dff47-9112-4f77-acf2-a76f3546e5d3"/>
 					<textElement>
-						<font fontName="Verdana" size="14" isBold="true"/>
+						<font fontName="SansSerif" size="14" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{reg_desc}]]></textFieldExpression>
 				</textField>
@@ -61,7 +61,7 @@ where reg_code = ob_reg_code]]>
 			<staticText>
 				<reportElement x="90" y="33" width="374" height="30" uuid="f9327da9-8cfa-4d1b-a1cd-4977483687da"/>
 				<textElement textAlignment="Left">
-					<font fontName="Verdana" size="20" isBold="true" isUnderline="true"/>
+					<font fontName="Serif" size="20" isBold="true" isUnderline="true"/>
 					<paragraph lineSpacing="Single"/>
 				</textElement>
 				<text><![CDATA[REGIONS REPORT]]></text>
@@ -79,21 +79,21 @@ where reg_code = ob_reg_code]]>
 			<textField>
 				<reportElement x="330" y="9" width="190" height="20" uuid="0b6e9f14-96ba-4d0e-a3d6-7013f41dae87"/>
 				<textElement>
-					<font fontName="Verdana" size="12"/>
+					<font fontName="SansSerif" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{ob_name}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="150" y="10" width="170" height="20" uuid="617fd9c0-bc7e-4503-8488-2d63114296ee"/>
 				<textElement>
-					<font fontName="Verdana" size="12"/>
+					<font fontName="SansSerif" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{ob_sht_desc}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="100" y="10" width="40" height="20" uuid="954faf7f-bdd2-48f3-88c9-5ea642ab762e"/>
 				<textElement>
-					<font fontName="Verdana" size="12"/>
+					<font fontName="SansSerif" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{COLUMN_COUNT}]]></textFieldExpression>
 			</textField>
