--- a/src/main/resources/reports/rpt_receipt.jrxml
+++ b/src/main/resources/reports/rpt_receipt.jrxml
@@ -1,24 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
-<!-- 2016-10-14T15:31:46 -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="receipt" pageWidth="421" pageHeight="297" orientation="Landscape" columnWidth="381" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="e0d718d6-aeff-4275-9b69-19e93ef0351b">
+<!-- 2016-10-14T22:58:03 -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="receipt" pageWidth="421" pageHeight="311" orientation="Landscape" columnWidth="381" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="e0d718d6-aeff-4275-9b69-19e93ef0351b">
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="test"/>
-	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="New Data Adapter "/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
+	<parameter name="receiptNo" class="java.lang.Long"/>
 	<queryString>
 		<![CDATA[select receipt_date,receipt_no,receipt_paid_by,receipt_amount,receipt_amt_words,receipt_desc,
-rect_narration,rect_amount,rect_rev_no
-from sys_receipts,sys_receipt_dtls
+rect_narration,rect_amount,rect_rev_no,pm_sh_desc
+from sys_receipts,sys_receipt_dtls,payment_modes
 where receipt_id = rect_receipt_no
-and receipt_id = 108]]>
+and receipt_pmode_id = pm_id
+and receipt_id =  $P{receiptNo}]]>
 	</queryString>
 	<field name="receipt_date" class="java.sql.Date"/>
 	<field name="receipt_no" class="java.lang.String"/>
@@ -29,13 +23,14 @@ and receipt_id = 108]]>
 	<field name="rect_narration" class="java.lang.String"/>
 	<field name="rect_amount" class="java.math.BigDecimal"/>
 	<field name="rect_rev_no" class="java.lang.String"/>
+	<field name="pm_sh_desc" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="54" splitType="Stretch">
+		<band height="41" splitType="Stretch">
 			<staticText>
-				<reportElement key="" x="65" y="6" width="250" height="42" uuid="3827ee9d-6b78-4538-ac6c-04183ab1a1b9"/>
+				<reportElement key="" x="65" y="6" width="250" height="29" uuid="3827ee9d-6b78-4538-ac6c-04183ab1a1b9"/>
 				<textElement textAlignment="Center">
 					<font size="24" isBold="true"/>
 				</textElement>
@@ -157,10 +152,14 @@ and receipt_id = 108]]>
 				<reportElement x="95" y="80" width="215" height="15" uuid="81d34e91-ef05-4b77-b8bd-fbbb19834ec0"/>
 				<textFieldExpression><![CDATA[$F{receipt_desc}]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement x="300" y="1" width="80" height="14" uuid="20b201f6-bbe5-4441-a242-3309c303fa6e"/>
+				<textFieldExpression><![CDATA[$F{receipt_no}]]></textFieldExpression>
+			</textField>
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="30" splitType="Stretch">
+		<band height="28" splitType="Stretch">
 			<frame>
 				<reportElement x="30" y="0" width="350" height="23" uuid="9c8be421-fd85-4c2f-8354-7a3ef6cffbe0"/>
 				<box>
@@ -194,6 +193,27 @@ and receipt_id = 108]]>
 		</band>
 	</detail>
 	<summary>
-		<band height="42" splitType="Stretch"/>
+		<band height="40" splitType="Stretch">
+			<staticText>
+				<reportElement x="0" y="5" width="80" height="15" uuid="a5e8d8e3-994f-4cd6-b06c-030075818ed4"/>
+				<text><![CDATA[Paid through]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="80" y="5" width="100" height="14" uuid="4c56f705-09b5-4266-98f4-09c7c6f1a07f"/>
+				<textFieldExpression><![CDATA[$F{pm_sh_desc}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="251" y="23" width="60" height="15" uuid="bd6638c1-6237-4f52-acbe-6b5745dbe635">
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
+				<text><![CDATA[Printed on:]]></text>
+			</staticText>
+			<textField pattern="d/M/yyyy">
+				<reportElement x="311" y="23" width="60" height="15" uuid="0fe61378-fd59-44f9-8c98-1a6e5f48840b">
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
+				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+			</textField>
+		</band>
 	</summary>
 </jasperReport>
