--- a/src/main/resources/reports/rpt_ten_stmt.jrxml
+++ b/src/main/resources/reports/rpt_ten_stmt.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
-<!-- 2016-10-17T07:45:48 -->
+<!-- 2016-10-17T13:18:33 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rpt_ten_stmt" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" isFloatColumnFooter="true" uuid="e098baf0-697f-492d-a8b3-f59692413b89">
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
@@ -11,7 +11,7 @@
 	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="New Data Adapter "/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="test"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w1" value="248"/>
 	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w2" value="741"/>
@@ -192,200 +192,87 @@ and trans_currency = cur_code
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="17" splitType="Stretch">
-			<frame>
-				<reportElement x="10" y="1" width="80" height="16" uuid="4ac16e08-c287-4e79-ad8b-41b1e4965e7f"/>
-				<box>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<staticText>
-					<reportElement x="1" y="1" width="79" height="15" uuid="6e783268-5ebc-401c-91a6-d98c03e4218e"/>
-					<text><![CDATA[Trans Date]]></text>
-				</staticText>
-			</frame>
-			<frame>
-				<reportElement x="90" y="1" width="90" height="16" uuid="199a7a52-a1fd-467b-a914-c39d59a17cd5"/>
-				<box>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<staticText>
-					<reportElement x="1" y="1" width="79" height="15" uuid="23ad09f0-0cef-49eb-876f-8a9eb4e5f2f9"/>
-					<text><![CDATA[Trans Type]]></text>
-				</staticText>
-			</frame>
-			<frame>
-				<reportElement x="180" y="1" width="190" height="16" uuid="7b105ba9-3cc4-4083-9354-d88b742c7174"/>
-				<box>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<staticText>
-					<reportElement x="1" y="1" width="99" height="15" uuid="49916276-62db-4bb7-9ecd-ec8e6ef4a863"/>
-					<text><![CDATA[Our Reference No.]]></text>
-				</staticText>
-			</frame>
-			<frame>
-				<reportElement x="370" y="1" width="110" height="16" uuid="f1b1bff4-5b48-4f9f-b635-9d4e9c017bcb"/>
-				<box>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<staticText>
-					<reportElement x="1" y="1" width="109" height="15" uuid="0069e964-7c71-4d09-a8ba-df5d6ffcc6ed"/>
-					<text><![CDATA[Transaction Amount]]></text>
-				</staticText>
-			</frame>
-			<frame>
-				<reportElement x="480" y="1" width="110" height="16" uuid="8a942301-7755-47ae-873f-846e9f8002f5"/>
-				<box>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<staticText>
-					<reportElement x="1" y="1" width="100" height="15" uuid="eb23a246-a4cb-4343-9f2f-32b8e048a7d0"/>
-					<text><![CDATA[Settlements]]></text>
-				</staticText>
-			</frame>
-			<frame>
-				<reportElement x="591" y="1" width="109" height="16" uuid="1cfdf366-5d67-42f6-8405-19455531b2a3"/>
-				<box>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<staticText>
-					<reportElement x="1" y="1" width="100" height="15" uuid="8415117f-7ee8-43f6-9684-89194700e675"/>
-					<text><![CDATA[Net Amount]]></text>
-				</staticText>
-			</frame>
+		<band height="34" splitType="Stretch">
+			<staticText>
+				<reportElement x="0" y="0" width="79" height="14" uuid="f010815a-eea7-40cc-9e19-649791c8e9a5"/>
+				<text><![CDATA[Trans Date]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="84" y="0" width="79" height="14" uuid="4d32e99c-8eac-4a17-bb02-a360a4f22024"/>
+				<text><![CDATA[Trans Type]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="168" y="0" width="196" height="14" uuid="96268466-addc-4bfb-b9fc-486b5d501a23"/>
+				<text><![CDATA[Our Reference No.]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="392" y="0" width="97" height="14" uuid="dc88bb06-7fc7-478a-b75c-722dede960fb"/>
+				<text><![CDATA[Transaction Amount]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="514" y="-3" width="76" height="14" uuid="316bdb97-ad96-4774-8890-7d58a649b998"/>
+				<text><![CDATA[Settled Amount]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="629" y="0" width="61" height="14" uuid="eeb3b194-7171-4eed-abf8-3a1799881811"/>
+				<text><![CDATA[Net Amount]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="16" splitType="Stretch">
-			<frame>
-				<reportElement x="10" y="1" width="80" height="15" uuid="0c6d5552-bd1d-4ba0-bb37-08f683edd2a2"/>
-				<box>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textField pattern="d/M/yyyy">
-					<reportElement x="2" y="2" width="68" height="12" uuid="88e9921f-2650-459a-b5a1-8990d704840f">
-						<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
-						<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
-					</reportElement>
-					<textFieldExpression><![CDATA[$F{trans_dt}]]></textFieldExpression>
-				</textField>
-			</frame>
-			<frame>
-				<reportElement x="90" y="1" width="90" height="15" uuid="5eda502d-c208-45bd-9fb8-17508980ced7"/>
-				<box>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textField>
-					<reportElement x="2" y="2" width="79" height="12" uuid="cf531459-7d29-4643-8ed2-0fd016a611d9"/>
-					<textFieldExpression><![CDATA[($F{trans_type}.equals("INV")) ? "New Transaction" :  ( 
+		<band height="17" splitType="Stretch">
+			<textField pattern="dd/MM/yyyy">
+				<reportElement x="0" y="0" width="80" height="14" uuid="c15c1427-b2b9-4b10-8ca8-eda61d712292"/>
+				<textFieldExpression><![CDATA[$F{trans_dt}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="85" y="0" width="100" height="14" uuid="d05c2543-baa2-41c4-9439-9e8eba14806a"/>
+				<textFieldExpression><![CDATA[($F{trans_type}.equals("INV")) ? "New Transaction" :  ( 
     ($F{trans_type}.equals("RN")) ? "Renewal" : (
           ($F{trans_type}.equals("RCT")) ? "Receipt" :  "Invalid"
             )
    )]]></textFieldExpression>
-				</textField>
-			</frame>
-			<frame>
-				<reportElement x="180" y="1" width="190" height="15" uuid="d1dc76ff-0dc2-4d7e-8a9b-a0b89f1a56a4"/>
-				<box>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textField>
-					<reportElement x="1" y="2" width="56" height="12" uuid="2680d680-015f-419a-b08c-62276870be93">
-						<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
-						<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
-					</reportElement>
-					<textFieldExpression><![CDATA[$F{trans_ref_no}]]></textFieldExpression>
-				</textField>
-				<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
-					<reportElement x="56" y="2" width="65" height="12" uuid="65f2f3ae-a591-4ee6-bf3e-55082c542401"/>
-					<textFieldExpression><![CDATA[$F{invoice_wef_date}]]></textFieldExpression>
-				</textField>
-				<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
-					<reportElement x="131" y="2" width="58" height="12" uuid="4d07d728-b8db-4742-8ff0-7ac7f499b69e">
-						<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
-						<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
-					</reportElement>
-					<textFieldExpression><![CDATA[$F{invoice_wet_date}]]></textFieldExpression>
-				</textField>
-			</frame>
-			<frame>
-				<reportElement x="370" y="1" width="110" height="15" uuid="7a9178fe-afc0-4fe5-908e-c70e7a51131d"/>
-				<box>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textField pattern="#,##0.00;#,##0.00">
-					<reportElement x="2" y="2" width="98" height="12" uuid="7d7c8722-9c22-42f6-8f8a-e524c20ddb26">
-						<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
-						<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
-					</reportElement>
-					<textElement textAlignment="Right"/>
-					<textFieldExpression><![CDATA[( $F{trans_dc}.equals("D") ? $F{trans_amount} : $F{trans_amount}.negate() )]]></textFieldExpression>
-				</textField>
-			</frame>
-			<frame>
-				<reportElement x="481" y="1" width="110" height="15" uuid="ed8a9b82-47d5-4e52-916c-838f89b9317e"/>
-				<box>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textField pattern="#,##0.00;#,##0.00">
-					<reportElement x="2" y="2" width="98" height="12" uuid="8882f001-8f93-468b-9960-9f9163c05297">
-						<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
-						<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
-					</reportElement>
-					<textElement textAlignment="Right"/>
-					<textFieldExpression><![CDATA[( $F{trans_dc}.equals("C") ? $F{trans_settled_amt} : $F{trans_settled_amt}.negate() )]]></textFieldExpression>
-				</textField>
-			</frame>
-			<frame>
-				<reportElement x="590" y="1" width="110" height="15" uuid="0bdc0c42-62df-4201-91bf-1d1b831fe262"/>
-				<box>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textField pattern="#,##0.00;#,##0.00">
-					<reportElement x="2" y="2" width="98" height="12" uuid="e9276968-0096-4de7-8059-ad04b4428a0f">
-						<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
-						<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
-					</reportElement>
-					<textElement textAlignment="Right"/>
-					<textFieldExpression><![CDATA[( $F{trans_dc}.equals("D") ? $F{trans_balance} : $F{trans_balance}.negate() )]]></textFieldExpression>
-				</textField>
-			</frame>
+			</textField>
+			<textField>
+				<reportElement x="190" y="0" width="60" height="14" uuid="bb7987df-739e-44d4-833d-51d7fcf35729">
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
+				<textFieldExpression><![CDATA[$F{trans_ref_no}]]></textFieldExpression>
+			</textField>
+			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
+				<reportElement x="250" y="0" width="60" height="16" uuid="b2063f81-e950-4deb-beff-53e3a1b15540">
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
+				<textFieldExpression><![CDATA[$F{invoice_wef_date}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="310" y="0" width="10" height="16" uuid="808dd626-2a2a-4dc1-b663-cc981b4f5169">
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+					<printWhenExpression><![CDATA[$F{invoice_wef_date}==null?false:true]]></printWhenExpression>
+				</reportElement>
+				<text><![CDATA[to]]></text>
+			</staticText>
+			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
+				<reportElement key="" x="320" y="0" width="70" height="16" uuid="78b20cfe-354e-4ac9-9c60-215cfe33303c"/>
+				<textFieldExpression><![CDATA[$F{invoice_wet_date}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="390" y="0" width="100" height="16" uuid="26980d82-b5be-450b-8ce7-a0c26b7e7db2">
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA[( $F{trans_dc}.equals("D") ? $F{trans_amount} : $F{trans_amount}.negate() )]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="490" y="0" width="100" height="16" uuid="ef44cb44-0299-481d-bc44-275d96054634"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA[( $F{trans_dc}.equals("C") ? $F{trans_settled_amt} : $F{trans_settled_amt}.negate() )]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="590" y="0" width="100" height="16" uuid="48afe8fa-797f-40b8-a786-38f2285ae7a8"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA[( $F{trans_dc}.equals("D") ? $F{trans_balance} : $F{trans_balance}.negate() )]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<columnFooter>
